# pinocchio-idl

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  codama.json
.github/workflows/: ci.yml
crates/fixtures/escrow-fixture/: Cargo.toml  idl.json
crates/fixtures/escrow-fixture/expected/: expanded.rs  idl.json
crates/fixtures/escrow-fixture/src/: lib.rs
crates/pinocchio-idl-cli/: Cargo.toml
crates/pinocchio-idl-cli/src/: cargo_main.rs  discover.rs  doctor.rs  idl_build.rs  init_agents.rs  lib.rs  main.rs  manifest.rs
crates/pinocchio-idl-cli/tests/: fixture_idl.rs
crates/pinocchio-idl-core/: Cargo.toml
crates/pinocchio-idl-core/src/: account_fields.rs  cli_struct.rs  helpers.rs  lib.rs  render.rs
crates/pinocchio-idl-macros/: Cargo.toml  README.md
crates/pinocchio-idl-macros/src/: helpers.rs  lib.rs
crates/test-program/: Cargo.toml
crates/test-program/src/: lib.rs
