[package]
name = "pinocchio-idl"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/pinocchio-idl-core",
    "crates/pinocchio-idl-macros",
    "crates/pinocchio-idl-cli",
    "crates/test-program"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
clap = { version = "4", features = ["derive"] }

[dependencies]
