[package]
name = "pinocchio-idl"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/pinocchio-idl-core",
    "crates/pinocchio-idl-macros",
    "crates/pinocchio-idl-cli",
    "crates/fixtures/escrow-fixture"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
syn = { version = "2.0.118", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = "1.0.45"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
toml = "0.8"
clap = { version = "4", features = ["derive"] }

[dependencies]
