[package]
name = "pinocchio-idl-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for generating IDLs for Pinocchio Solana programs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DivineUX23/pinocchio-idl"
keywords = ["solana", "pinocchio", "idl", "anchor", "codegen"]
categories = ["development-tools::build-utils", "command-line-utilities", "cryptography::cryptocurrencies"]

[lib]
name = "pinocchio_idl_cli"
path = "src/lib.rs"

[[bin]]
name = "pinocchio-idl"
path = "src/main.rs"


[dependencies]
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
pinocchio-idl-core = { version = "0.1.0", path = "../pinocchio-idl-core" }
anyhow = "1.0.103"
cargo_toml = "1.0.0"
ignore = "0.4.28"
