[package]
name = "pinocchio-idl"
version.workspace = true
edition.workspace = true
description = "Generate Anchor-compatible IDLs from Pinocchio Solana programs. Bridges lightweight smart contracts with standard frontend tooling."
license = "MIT OR Apache-2.0"
repository = "https://github.com/DivineUX23/pinocchio-idl"
readme = "../../README.md"
keywords = ["solana", "anchor", "idl", "pinocchio", "codegen"]
categories = ["development-tools::build-utils", "command-line-utilities", "cryptography::cryptocurrencies"]

[lib]
name = "pinocchio_idl_cli"
path = "src/lib.rs"

[[bin]]
name = "pinocchio-idl"
path = "src/main.rs"

[[bin]]
name = "cargo-pinocchio-idl"
path = "src/cargo_main.rs"


[dependencies]
syn = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
pinocchio-idl-core = { version = "0.1.0", path = "../pinocchio-idl-core" }
anyhow = "1.0.103"
cargo_toml = "1.0.0"
ignore = "0.4.28"
