[package]
name = "pinocchio-idl-core"
version = "0.1.0"
edition = "2024"
description = "Core types and structures for Pinocchio IDL generation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DivineUX23/pinocchio-idl"
readme = "../../README.md"
keywords = ["solana", "pinocchio", "idl", "anchor", "codegen"]
categories = ["development-tools::build-utils", "encoding", "cryptography::cryptocurrencies"]

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = {version = "2.0.118", features = ["full", "extra-traits"] }
serde = { workspace = true }
sha2 = { workspace = true }
bs58 = "0.5.1"
