[package]
name = "pinocchio-idl-core"
version.workspace = true
edition.workspace = true
description = "Zero-cost core IDL types and structures for pinocchio-idl, an Anchor-compatible IDL generator for Pinocchio Solana programs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DivineUX23/pinocchio-idl"
keywords = ["solana", "pinocchio", "idl", "anchor", "codegen"]
categories = ["development-tools::build-utils", "encoding", "cryptography::cryptocurrencies"]

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
bs58 = "0.5.1"
