[package]
name = "pinocchio-idl-macros"
version.workspace = true
edition.workspace = true
description = "Compile-time account validation and automated Anchor IDL generation macros for Pinocchio Solana programs."
license = "MIT OR Apache-2.0"
repository = "https://github.com/DivineUX23/pinocchio-idl"
keywords = ["solana", "pinocchio", "anchor", "proc-macro", "account-validation"]
categories = ["development-tools::procedural-macro-helpers", "development-tools", "cryptography::cryptocurrencies"]

[lib]
proc-macro = true

[dependencies]
pinocchio = "0.11.2"
pinocchio-idl-core = { version = "0.1.1", path = "../pinocchio-idl-core" }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
